Atualização da biblioteca de paginação